fix: border-radius on image and flex alignment on list items

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -52,6 +52,7 @@ $box-shadow-card: 0px 15px 60px rgba(0, 0, 0, 0.25);
 // BORDER RADIUS
 $border-radius-input: 0.8rem;
 $border-radius-container: 3.6rem;
+$border-radius-image: 1.6rem;
 
 // BREAKPOINTS
 $breakpoint-sm: 500px;
