--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -49,7 +49,7 @@
       width: 100%;
       height: auto;
       object-fit: cover;
-      border-radius: variables.$border-radius-container;
+      border-radius: variables.$border-radius-image;
 
       @include mixins.respond(sm) {
         border-top-left-radius: 0;
